[gd_scene load_steps=8 format=3 uid="uid://4fyoq8npekf0"]

[ext_resource type="Script" path="res://scenes-and-scripts/gameplay/world.gd" id="1_li0ht"]
[ext_resource type="PackedScene" uid="uid://barl4q1kugrmm" path="res://scenes-and-scripts/gameplay/pause-layer/pause-layer.tscn" id="2_mk7kn"]
[ext_resource type="PackedScene" uid="uid://b3mf65fcnvmvu" path="res://scenes-and-scripts/characters/player.tscn" id="3_vhnxw"]
[ext_resource type="PackedScene" uid="uid://byks0f5xqnv20" path="res://scenes-and-scripts/tree.tscn" id="4_l562g"]
[ext_resource type="Script" path="res://scenes-and-scripts/saver_loader.gd" id="5_m8xuy"]
[ext_resource type="PackedScene" uid="uid://cp7bdncv26bbl" path="res://scenes-and-scripts/characters/wbc.tscn" id="6_scc53"]

[sub_resource type="Curve2D" id="Curve2D_xsefa"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -77, -43, 0, 0, 0, 0, 1221, -46, 0, 0, 0, 0, 1230, 676, 0, 0, 0, 0, -77, 676, 0, 0, 0, 0, -77, -43)
}
point_count = 5

[node name="World" type="Node2D"]
script = ExtResource("1_li0ht")

[node name="PauseLayer" parent="." instance=ExtResource("2_mk7kn")]
layer = 20
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[node name="Player" parent="." instance=ExtResource("3_vhnxw")]
position = Vector2(581, 323)

[node name="EnemyPath" type="Path2D" parent="Player"]
position = Vector2(-581, -323)
curve = SubResource("Curve2D_xsefa")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="Player/EnemyPath"]
unique_name_in_owner = true
position = Vector2(-77, -43)
rotation = -0.00231124

[node name="EnemiesNode" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Tree" parent="." instance=ExtResource("4_l562g")]
position = Vector2(1002, 52)

[node name="Tree2" parent="." instance=ExtResource("4_l562g")]
position = Vector2(226, 469)

[node name="Tree3" parent="." instance=ExtResource("4_l562g")]
position = Vector2(227, 65)

[node name="Tree4" parent="." instance=ExtResource("4_l562g")]
position = Vector2(903, 424)

[node name="SaverLoader" type="Node" parent="."]
script = ExtResource("5_m8xuy")

[node name="WBC" parent="." instance=ExtResource("6_scc53")]
collision_mask = 4

[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
